<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="300dp"
    android:layout_height="450dp"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="0dp">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/textViewPauseMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:id="@+id/linearLayoutHome"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:background="@color/orange"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayoutRestartRound"
        app:layout_constraintEnd_toStartOf="@id/linearLayoutRestartRound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutRestartRound">

        <TextView
            android:id="@+id/textViewHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRestartRound"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:background="@color/blueDark"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/close_pause"
        app:layout_constraintEnd_toStartOf="@+id/linearLayoutToggleSound"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutHome"
        app:layout_constraintTop_toBottomOf="@+id/textViewPauseMenu">

        <TextView
            android:id="@+id/textViewRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/round"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutToggleSound"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:background="@color/green"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayoutRestartRound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutRestartRound"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutRestartRound">

        <TextView
            android:id="@+id/textViewToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewPauseMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/pause_menu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutRestartRound"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <Button
        android:id="@+id/close_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/resume_game"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutRestartRound" />

</androidx.constraintlayout.widget.ConstraintLayout>