<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOverActivity"
    android:background="@drawable/backround15">

    <TextView
        android:id="@+id/winner_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/winner"
        android:textColor="#FFFFFF"
        android:textSize="15pt"
        app:layout_constraintBottom_toTopOf="@+id/winner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0C150E"
        android:text="@string/text_view"
        android:textColor="#FFFFFF"
        android:textSize="15pt"
        app:layout_constraintBottom_toTopOf="@+id/goHome"
        app:layout_constraintEnd_toEndOf="@+id/winner_banner"
        app:layout_constraintStart_toStartOf="@+id/winner_banner"
        app:layout_constraintTop_toBottomOf="@+id/winner_banner" />

    <Button
        android:id="@+id/goHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/winner"
        app:layout_constraintStart_toStartOf="@+id/winner"
        app:layout_constraintTop_toBottomOf="@+id/winner" />

</androidx.constraintlayout.widget.ConstraintLayout>