<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/scoreBoard"
        android:layout_width="193dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="100dp"
        android:text="@string/high_scores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/startPacking"
        android:layout_width="193dp"
        android:layout_height="47dp"
        android:layout_marginTop="204dp"
        android:layout_marginBottom="38dp"
        android:text="@string/start_packing"
        app:layout_constraintBottom_toTopOf="@+id/scoreBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="211dp"
        android:text="@string/app_name"
        android:textSize="20pt"
        app:layout_constraintBottom_toTopOf="@+id/scoreBoard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

</androidx.constraintlayout.widget.ConstraintLayout>