<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround12_1"
    tools:context=".StartOfRoundActivity">

    <TextView
        android:id="@+id/w2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/pass_the_phone"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/currentPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/text_view"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20pt"
        app:layout_constraintBottom_toTopOf="@+id/countdown"
        app:layout_constraintEnd_toEndOf="@+id/w2"
        app:layout_constraintStart_toStartOf="@+id/w2"
        app:layout_constraintTop_toBottomOf="@+id/w2" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdown"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@id/countdownText"
        app:layout_constraintEnd_toEndOf="@+id/currentPlayer"
        app:layout_constraintStart_toStartOf="@+id/currentPlayer"
        app:layout_constraintTop_toBottomOf="@+id/currentPlayer" />

    <TextView
        android:id="@+id/countdownText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="@+id/countdown"
        app:layout_constraintStart_toStartOf="@+id/countdown"
        app:layout_constraintTop_toBottomOf="@+id/countdown"
        tools:text="0:10" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:text="@string/skip_countdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/countdownText"
        app:layout_constraintStart_toStartOf="@+id/countdownText"
        app:layout_constraintTop_toBottomOf="@+id/countdownText" />
</androidx.constraintlayout.widget.ConstraintLayout>